--- a/public/parralex-index.html
+++ b/public/parralex-index.html
@@ -98,7 +98,7 @@
         <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"
           ><i class="fa fa-th"></i> PORTFOLIO</a
         >
-        <a href="#contact" class="w3-bar-item w3-button w3-hide-small"
+        <a class="w3-bar-item w3-button w3-hide-small"
           ><i class="fa fa-envelope"></i> CONTACT</a
         >
         <a
@@ -126,12 +126,7 @@
           onclick="toggleFunction()"
           >PORTFOLIO</a
         >
-        <a
-          href="#contact"
-          class="w3-bar-item w3-button"
-          onclick="toggleFunction()"
-          >CONTACT</a
-        >
+        <a class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
         <a href="#" class="w3-bar-item w3-button">SEARCH</a>
       </div>
     </div>
